plataforma/kyverno/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    policies.kyverno.io/title: Require CPU and memory requests/limits
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment
spec:
  validationFailureAction: Audit
  emitWarning: true
  background: true
  rules:
    - name: check-resources
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - app
      validate:
        message: "All containers must define cpu/memory requests and limits."
        foreach:
          - list: "request.object.spec.template.spec.containers"
            pattern:
              resources:
                requests:
                  cpu: "?*"
                  memory: "?*"
                limits:
                  cpu: "?*"
                  memory: "?*"
